; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_cert.c_CRYPT_SetBitInField.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/crypt32/extr_cert.c_CRYPT_SetBitInField.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.BitField = type { i32, i32* }

@BITS_PER_DWORD = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.BitField*, i32)* @CRYPT_SetBitInField to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @CRYPT_SetBitInField(%struct.BitField* %0, i32 %1) #0 {
  %3 = alloca %struct.BitField*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.BitField* %0, %struct.BitField** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @BITS_PER_DWORD, align 4
  %8 = sdiv i32 %6, %7
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = add nsw i32 %9, 1
  %11 = load %struct.BitField*, %struct.BitField** %3, align 8
  %12 = getelementptr inbounds %struct.BitField, %struct.BitField* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = icmp sgt i32 %10, %13
  br i1 %14, label %15, label %53

15:                                               ; preds = %2
  %16 = load %struct.BitField*, %struct.BitField** %3, align 8
  %17 = getelementptr inbounds %struct.BitField, %struct.BitField* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 8
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %32

20:                                               ; preds = %15
  %21 = load %struct.BitField*, %struct.BitField** %3, align 8
  %22 = getelementptr inbounds %struct.BitField, %struct.BitField* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  %24 = load i32, i32* %5, align 4
  %25 = add nsw i32 %24, 1
  %26 = sext i32 %25 to i64
  %27 = mul i64 %26, 4
  %28 = trunc i64 %27 to i32
  %29 = call i32* @CryptMemRealloc(i32* %23, i32 %28)
  %30 = load %struct.BitField*, %struct.BitField** %3, align 8
  %31 = getelementptr inbounds %struct.BitField, %struct.BitField* %30, i32 0, i32 1
  store i32* %29, i32** %31, align 8
  br label %36

32:                                               ; preds = %15
  %33 = call i32* @CryptMemAlloc(i32 4)
  %34 = load %struct.BitField*, %struct.BitField** %3, align 8
  %35 = getelementptr inbounds %struct.BitField, %struct.BitField* %34, i32 0, i32 1
  store i32* %33, i32** %35, align 8
  br label %36

36:                                               ; preds = %32, %20
  %37 = load %struct.BitField*, %struct.BitField** %3, align 8
  %38 = getelementptr inbounds %struct.BitField, %struct.BitField* %37, i32 0, i32 1
  %39 = load i32*, i32** %38, align 8
  %40 = icmp ne i32* %39, null
  br i1 %40, label %41, label %52

41:                                               ; preds = %36
  %42 = load %struct.BitField*, %struct.BitField** %3, align 8
  %43 = getelementptr inbounds %struct.BitField, %struct.BitField* %42, i32 0, i32 1
  %44 = load i32*, i32** %43, align 8
  %45 = load i32, i32* %5, align 4
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds i32, i32* %44, i64 %46
  store i32 0, i32* %47, align 4
  %48 = load i32, i32* %5, align 4
  %49 = add nsw i32 %48, 1
  %50 = load %struct.BitField*, %struct.BitField** %3, align 8
  %51 = getelementptr inbounds %struct.BitField, %struct.BitField* %50, i32 0, i32 0
  store i32 %49, i32* %51, align 8
  br label %52

52:                                               ; preds = %41, %36
  br label %53

53:                                               ; preds = %52, %2
  %54 = load %struct.BitField*, %struct.BitField** %3, align 8
  %55 = getelementptr inbounds %struct.BitField, %struct.BitField* %54, i32 0, i32 1
  %56 = load i32*, i32** %55, align 8
  %57 = icmp ne i32* %56, null
  br i1 %57, label %58, label %71

58:                                               ; preds = %53
  %59 = load i32, i32* %4, align 4
  %60 = load i32, i32* @BITS_PER_DWORD, align 4
  %61 = srem i32 %59, %60
  %62 = shl i32 1, %61
  %63 = load %struct.BitField*, %struct.BitField** %3, align 8
  %64 = getelementptr inbounds %struct.BitField, %struct.BitField* %63, i32 0, i32 1
  %65 = load i32*, i32** %64, align 8
  %66 = load i32, i32* %5, align 4
  %67 = sext i32 %66 to i64
  %68 = getelementptr inbounds i32, i32* %65, i64 %67
  %69 = load i32, i32* %68, align 4
  %70 = or i32 %69, %62
  store i32 %70, i32* %68, align 4
  br label %71

71:                                               ; preds = %58, %53
  ret void
}

declare dso_local i32* @CryptMemRealloc(i32*, i32) #1

declare dso_local i32* @CryptMemAlloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
